Atualização translations/texts/items/augments/fishing/fishingreelfast.augment.json

--- a/translations/texts/items/augments/fishing/fishingreelfast.augment.json
+++ b/translations/texts/items/augments/fishing/fishingreelfast.augment.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "High Speed Reel"
+      "Eng": "High Speed Reel",
+      "Por": "Carretel de Alta Velocidade"
     }
   }
 ]
