--- a/translations/texts/items/augments/fishing/fishingreellong.augment.json
+++ b/translations/texts/items/augments/fishing/fishingreellong.augment.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "High Capacity Reel"
+      "Eng": "High Capacity Reel",
+      "Por": "Carretel de Alta Capacidade"
     }
   }
 ]
