Atualização translations/texts/items/augments/fishing/fishingreelstrong.augment.json

--- a/translations/texts/items/augments/fishing/fishingreelstrong.augment.json
+++ b/translations/texts/items/augments/fishing/fishingreelstrong.augment.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "High Tension Reel"
+      "Eng": "High Tension Reel",
+      "Por": "Carretel de Alta Tensão"
     }
   }
 ]
