--- a/translations/texts/items/augments/pet/bouncycollar.augment.json
+++ b/translations/texts/items/augments/pet/bouncycollar.augment.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Bouncy Collar"
+      "Eng": "Bouncy Collar",
+      "Por": "Coleira Saltitante"
     }
   }
 ]
