Atualização translations/texts/items/augments/pet/damagecollar1.augment.json

--- a/translations/texts/items/augments/pet/damagecollar1.augment.json
+++ b/translations/texts/items/augments/pet/damagecollar1.augment.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Damage I Collar"
+      "Eng": "Damage I Collar",
+      "Por": "Coleira de Dano I"
     }
   }
 ]
