--- a/translations/texts/items/augments/pet/damagecollar2.augment.json
+++ b/translations/texts/items/augments/pet/damagecollar2.augment.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Damage II Collar"
+      "Eng": "Damage II Collar",
+      "Por": "Coleira de Dano II"
     }
   }
 ]
