Atualização translations/texts/items/augments/pet/damagecollar3.augment.json

--- a/translations/texts/items/augments/pet/damagecollar3.augment.json
+++ b/translations/texts/items/augments/pet/damagecollar3.augment.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Damage III Collar"
+      "Eng": "Damage III Collar",
+      "Por": "Coleira de Dano III"
     }
   }
 ]
