Atualização translations/texts/items/augments/pet/electricbombcollar.augment.json

--- a/translations/texts/items/augments/pet/electricbombcollar.augment.json
+++ b/translations/texts/items/augments/pet/electricbombcollar.augment.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Electric Bomb Collar"
+      "Eng": "Electric Bomb Collar",
+      "Por": "Coleira de Bomba Elétrica"
     }
   }
 ]
