Atualização translations/texts/items/augments/pet/firebombcollar.augment.json

--- a/translations/texts/items/augments/pet/firebombcollar.augment.json
+++ b/translations/texts/items/augments/pet/firebombcollar.augment.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Fire Bomb Collar"
+      "Eng": "Fire Bomb Collar",
+      "Por": "Coleira de Bomba de Fogo"
     }
   }
 ]
