--- a/translations/texts/items/augments/pet/ghostlycollar.augment.json
+++ b/translations/texts/items/augments/pet/ghostlycollar.augment.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Ghostly Collar"
+      "Eng": "Ghostly Collar",
+      "Por": "Coleira Fantasmagórica"
     }
   }
 ]
