Atualização translations/texts/items/augments/pet/healingcollar1.augment.json

--- a/translations/texts/items/augments/pet/healingcollar1.augment.json
+++ b/translations/texts/items/augments/pet/healingcollar1.augment.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Healing I Collar"
+      "Eng": "Healing I Collar",
+      "Por": "Coleira de Cura I"
     }
   }
 ]
