Atualização translations/texts/items/augments/pet/healingcollar2.augment.json

--- a/translations/texts/items/augments/pet/healingcollar2.augment.json
+++ b/translations/texts/items/augments/pet/healingcollar2.augment.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Healing II Collar"
+      "Eng": "Healing II Collar",
+      "Por": "Coleira de Cura II"
     }
   }
 ]
