--- a/translations/texts/items/augments/pet/healingcollar3.augment.json
+++ b/translations/texts/items/augments/pet/healingcollar3.augment.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Healing III Collar"
+      "Eng": "Healing III Collar",
+      "Por": "Coleira de Cura III"
     }
   }
 ]
