--- a/translations/texts/items/augments/pet/healthcollar1.augment.json
+++ b/translations/texts/items/augments/pet/healthcollar1.augment.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Health I Collar"
+      "Eng": "Health I Collar",
+      "Por": "Coleira de Vida I"
     }
   }
 ]
