Atualização translations/texts/items/augments/pet/healthcollar2.augment.json

--- a/translations/texts/items/augments/pet/healthcollar2.augment.json
+++ b/translations/texts/items/augments/pet/healthcollar2.augment.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Health II Collar"
+      "Eng": "Health II Collar",
+      "Por": "Coleira de Vida II"
     }
   }
 ]
