--- a/translations/texts/items/augments/pet/healthcollar3.augment.json
+++ b/translations/texts/items/augments/pet/healthcollar3.augment.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Health III Collar"
+      "Eng": "Health III Collar",
+      "Por": "Coleira de Vida III"
     }
   }
 ]
