--- a/translations/texts/items/augments/pet/icebombcollar.augment.json
+++ b/translations/texts/items/augments/pet/icebombcollar.augment.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Ice Bomb Collar"
+      "Eng": "Ice Bomb Collar",
+      "Por": "Coleira de Bomba de Gelo"
     }
   }
 ]
