Atualização translations/texts/items/augments/pet/lightcollar.augment.json

--- a/translations/texts/items/augments/pet/lightcollar.augment.json
+++ b/translations/texts/items/augments/pet/lightcollar.augment.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Light Collar"
+      "Eng": "Light Collar",
+      "Por": "Coleira de Luz"
     }
   }
 ]
