Atualização translations/texts/items/augments/pet/obliviouscollar.augment.json

--- a/translations/texts/items/augments/pet/obliviouscollar.augment.json
+++ b/translations/texts/items/augments/pet/obliviouscollar.augment.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Oblivious Collar"
+      "Eng": "Oblivious Collar",
+      "Por": "Coleira do Esquecimento"
     }
   }
 ]
