--- a/translations/texts/items/augments/pet/poisonbombcollar.augment.json
+++ b/translations/texts/items/augments/pet/poisonbombcollar.augment.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Poison Bomb Collar"
+      "Eng": "Poison Bomb Collar",
+      "Por": "Coleira de Bomba de Veneno"
     }
   }
 ]
