--- a/translations/texts/items/currency/essence.currency.json
+++ b/translations/texts/items/currency/essence.currency.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Ancient Essence"
+      "Eng": "Ancient Essence",
+      "Por": "Essência Antiga"
     }
   }
 ]
