--- a/translations/texts/items/generic/crafting/aegisaltore.item.json
+++ b/translations/texts/items/generic/crafting/aegisaltore.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Aegisalt Ore"
+      "Eng": "Aegisalt Ore",
+      "Por": "Minério de Aegisalt"
     }
   }
 ]
