--- a/translations/texts/items/generic/crafting/alienweirdwood.item.json
+++ b/translations/texts/items/generic/crafting/alienweirdwood.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Alien Weird Wood"
+      "Eng": "Alien Weird Wood",
+      "Por": "Madeira Alienígena Estranha"
     }
   }
 ]
