--- a/translations/texts/items/generic/crafting/alienwoodsap.item.json
+++ b/translations/texts/items/generic/crafting/alienwoodsap.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Alien Wood Sap"
+      "Eng": "Alien Wood Sap",
+      "Por": "Seiva de Madeira Alienígena"
     }
   }
 ]
