Atualização translations/texts/items/generic/crafting/ancientbones.item.json

--- a/translations/texts/items/generic/crafting/ancientbones.item.json
+++ b/translations/texts/items/generic/crafting/ancientbones.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Ancient Bones"
+      "Eng": "Ancient Bones",
+      "Por": "Ossos Antigos"
     }
   }
 ]
