Atualização translations/texts/items/generic/crafting/artificialbrain.item.json

--- a/translations/texts/items/generic/crafting/artificialbrain.item.json
+++ b/translations/texts/items/generic/crafting/artificialbrain.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Artificial Brain"
+      "Eng": "Artificial Brain",
+      "Por": "Cérebro Artificial"
     }
   }
 ]
