--- a/translations/texts/items/generic/crafting/biosample.item.json
+++ b/translations/texts/items/generic/crafting/biosample.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Bio Sample"
+      "Eng": "Bio Sample",
+      "Por": "Amostra Biológica"
     }
   }
 ]
