--- a/translations/texts/items/generic/crafting/bottle.item.json
+++ b/translations/texts/items/generic/crafting/bottle.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Empty Bottle"
+      "Eng": "Empty Bottle",
+      "Por": "Garrafa Vazia"
     }
   }
 ]
