--- a/translations/texts/items/generic/crafting/brain.item.json
+++ b/translations/texts/items/generic/crafting/brain.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Superior Brain"
+      "Eng": "Superior Brain",
+      "Por": "Cérebro Superior"
     }
   }
 ]
