--- a/translations/texts/items/generic/crafting/cellmateria.item.json
+++ b/translations/texts/items/generic/crafting/cellmateria.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Cell Materia"
+      "Eng": "Cell Materia",
+      "Por": "Matéria Celular"
     }
   }
 ]
