--- a/translations/texts/items/generic/crafting/cellmatter.item.json
+++ b/translations/texts/items/generic/crafting/cellmatter.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Cell Matter"
+      "Eng": "Cell Matter",
+      "Por": "Matéria Celular"
     }
   }
 ]
