--- a/translations/texts/items/generic/crafting/cog.item.json
+++ b/translations/texts/items/generic/crafting/cog.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Copper Cog"
+      "Eng": "Copper Cog",
+      "Por": "Engrenagem de Cobre"
     }
   }
 ]
