--- a/translations/texts/items/generic/crafting/copperbar.item.json
+++ b/translations/texts/items/generic/crafting/copperbar.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Copper Bar"
+      "Eng": "Copper Bar",
+      "Por": "Barra de Cobre"
     }
   }
 ]
