--- a/translations/texts/items/generic/crafting/copperore.item.json
+++ b/translations/texts/items/generic/crafting/copperore.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Copper Ore"
+      "Eng": "Copper Ore",
+      "Por": "Minério de Cobre"
     }
   }
 ]
