Atualização translations/texts/items/generic/crafting/coralfragment.item.json

--- a/translations/texts/items/generic/crafting/coralfragment.item.json
+++ b/translations/texts/items/generic/crafting/coralfragment.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Ember Coral Fragment"
+      "Eng": "Ember Coral Fragment",
+      "Por": "Fragmento de Coral Brasa"
     }
   }
 ]
