Atualização translations/texts/items/generic/crafting/corefragmentore.item.json

--- a/translations/texts/items/generic/crafting/corefragmentore.item.json
+++ b/translations/texts/items/generic/crafting/corefragmentore.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Core Fragment"
+      "Eng": "Core Fragment",
+      "Por": "Fragmento de Núcleo"
     }
   }
 ]
