--- a/translations/texts/items/generic/crafting/cotton.item.json
+++ b/translations/texts/items/generic/crafting/cotton.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Cotton Fibre"
+      "Eng": "Cotton Fibre",
+      "Por": "Fibra de Algodão"
     }
   }
 ]
