--- a/translations/texts/items/generic/crafting/dragonbone.item.json
+++ b/translations/texts/items/generic/crafting/dragonbone.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Dragon Bone"
+      "Eng": "Dragon Bone",
+      "Por": "Osso de Dragão"
     }
   }
 ]
