--- a/translations/texts/items/generic/crafting/durasteelbar.item.json
+++ b/translations/texts/items/generic/crafting/durasteelbar.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Durasteel Bar"
+      "Eng": "Durasteel Bar",
+      "Por": "Barra de Duraço"
     }
   }
 ]
