--- a/translations/texts/items/generic/crafting/durasteelore.item.json
+++ b/translations/texts/items/generic/crafting/durasteelore.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Durasteel Ore"
+      "Eng": "Durasteel Ore",
+      "Por": "Minério de Duraço"
     }
   }
 ]
