--- a/translations/texts/items/generic/crafting/endomorphicjelly.item.json
+++ b/translations/texts/items/generic/crafting/endomorphicjelly.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Endomorphic Jelly"
+      "Eng": "Endomorphic Jelly",
+      "Por": "Geléia Endomórfica"
     }
   }
 ]
