--- a/translations/texts/items/generic/crafting/fabric.item.json
+++ b/translations/texts/items/generic/crafting/fabric.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Woven Fabric"
+      "Eng": "Woven Fabric",
+      "Por": "Tecido Entrelaçado"
     }
   }
 ]
