--- a/translations/texts/items/generic/crafting/feroziumore.item.json
+++ b/translations/texts/items/generic/crafting/feroziumore.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Ferozium Ore"
+      "Eng": "Ferozium Ore",
+      "Por": "Minério de Ferozium"
     }
   }
 ]
