Atualização translations/texts/items/generic/crafting/fleshstrand.item.json

--- a/translations/texts/items/generic/crafting/fleshstrand.item.json
+++ b/translations/texts/items/generic/crafting/fleshstrand.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Flesh Strand"
+      "Eng": "Flesh Strand",
+      "Por": "Cordão de Carne"
     }
   }
 ]
