Atualização translations/texts/items/generic/crafting/fossilore.item.json

--- a/translations/texts/items/generic/crafting/fossilore.item.json
+++ b/translations/texts/items/generic/crafting/fossilore.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Unidentified Fossil"
+      "Eng": "Unidentified Fossil",
+      "Por": "Fóssil Não Identificado"
     }
   }
 ]
