Atualização translations/texts/items/generic/crafting/giantflowerpetal.item.json

--- a/translations/texts/items/generic/crafting/giantflowerpetal.item.json
+++ b/translations/texts/items/generic/crafting/giantflowerpetal.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Giant Flower Petal"
+      "Eng": "Giant Flower Petal",
+      "Por": "Pétala de Flor Gigante"
     }
   }
 ]
