Atualização translations/texts/items/generic/crafting/glasscoffeemug.item.json

--- a/translations/texts/items/generic/crafting/glasscoffeemug.item.json
+++ b/translations/texts/items/generic/crafting/glasscoffeemug.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Glass Coffee Mug"
+      "Eng": "Glass Coffee Mug",
+      "Por": "Caneca de Café de Vidro"
     }
   }
 ]
