--- a/translations/texts/items/generic/crafting/glowfibre.item.json
+++ b/translations/texts/items/generic/crafting/glowfibre.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Glow Fibre"
+      "Eng": "Glow Fibre",
+      "Por": "Fibra Brilhante"
     }
   }
 ]
