Atualização translations/texts/items/generic/crafting/hinge.item.json

--- a/translations/texts/items/generic/crafting/hinge.item.json
+++ b/translations/texts/items/generic/crafting/hinge.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Iron Hinge"
+      "Eng": "Iron Hinge",
+      "Por": "Dobradiça de Ferro"
     }
   }
 ]
