--- a/translations/texts/items/generic/crafting/holidayspirit.item.json
+++ b/translations/texts/items/generic/crafting/holidayspirit.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Holiday Spirit"
+      "Eng": "Holiday Spirit",
+      "Por": "Espírito Festivo"
     }
   }
 ]
