--- a/translations/texts/items/generic/crafting/icecrystal.item.json
+++ b/translations/texts/items/generic/crafting/icecrystal.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Ice Crystal"
+      "Eng": "Ice Crystal",
+      "Por": "Cristal de Gelo"
     }
   }
 ]
