Atualização translations/texts/items/generic/crafting/inferiorbrain.item.json

--- a/translations/texts/items/generic/crafting/inferiorbrain.item.json
+++ b/translations/texts/items/generic/crafting/inferiorbrain.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Inferior Brain"
+      "Eng": "Inferior Brain",
+      "Por": "Cérebro Inferior"
     }
   }
 ]
