Atualização translations/texts/items/generic/crafting/metallic.item.json

--- a/translations/texts/items/generic/crafting/metallic.item.json
+++ b/translations/texts/items/generic/crafting/metallic.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Metal Coated Wood"
+      "Eng": "Metal Coated Wood",
+      "Por": "Madeira Revestida de Metal"
     }
   }
 ]
