--- a/translations/texts/items/generic/crafting/moltencore.item.json
+++ b/translations/texts/items/generic/crafting/moltencore.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Molten Core"
+      "Eng": "Molten Core",
+      "Por": "Núcleo Fundido"
     }
   }
 ]
