Atualização translations/texts/items/generic/crafting/monsterplating.item.json

--- a/translations/texts/items/generic/crafting/monsterplating.item.json
+++ b/translations/texts/items/generic/crafting/monsterplating.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Hardened Monster Plate"
+      "Eng": "Hardened Monster Plate",
+      "Por": "Placa de Monstro Endurecida"
     }
   }
 ]
