Atualização translations/texts/items/generic/crafting/moonstoneore.item.json

--- a/translations/texts/items/generic/crafting/moonstoneore.item.json
+++ b/translations/texts/items/generic/crafting/moonstoneore.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Moonstone Ore"
+      "Eng": "Moonstone Ore",
+      "Por": "Minério de Pedra Lunar"
     }
   }
 ]
