--- a/translations/texts/items/generic/crafting/petalyellow.item.json
+++ b/translations/texts/items/generic/crafting/petalyellow.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Yellow Petal"
+      "Eng": "Yellow Petal",
+      "Por": "Pétala Amarela"
     }
   }
 ]
