--- a/translations/texts/items/generic/crafting/plantfibre.item.json
+++ b/translations/texts/items/generic/crafting/plantfibre.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Plant Fibre"
+      "Eng": "Plant Fibre",
+      "Por": "Fibra de Planta"
     }
   }
 ]
