--- a/translations/texts/items/generic/crafting/platinumbar.item.json
+++ b/translations/texts/items/generic/crafting/platinumbar.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Platinum Bar"
+      "Eng": "Platinum Bar",
+      "Por": "Barra de Platina"
     }
   }
 ]
