--- a/translations/texts/items/generic/crafting/platinumore.item.json
+++ b/translations/texts/items/generic/crafting/platinumore.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Platinum Ore"
+      "Eng": "Platinum Ore",
+      "Por": "Minério de Platina"
     }
   }
 ]
