--- a/translations/texts/items/generic/crafting/plutoniumore.item.json
+++ b/translations/texts/items/generic/crafting/plutoniumore.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Plutonium Ore"
+      "Eng": "Plutonium Ore",
+      "Por": "Minério de Plutónio"
     }
   }
 ]
