Atualização translations/texts/items/generic/crafting/polymer.item.json

--- a/translations/texts/items/generic/crafting/polymer.item.json
+++ b/translations/texts/items/generic/crafting/polymer.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Space Age Polymer"
+      "Eng": "Space Age Polymer",
+      "Por": "Polímero da Era Espacial"
     }
   }
 ]
