--- a/translations/texts/items/generic/crafting/plutoniumrod.item.json
+++ b/translations/texts/items/generic/crafting/plutoniumrod.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Plutonium Rod"
+      "Eng": "Plutonium Rod",
+      "Por": "Vareta de Plutónio"
     }
   }
 ]
