--- a/translations/texts/items/generic/crafting/prisiliteore.item.json
+++ b/translations/texts/items/generic/crafting/prisiliteore.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Prism Shard"
+      "Eng": "Prism Shard",
+      "Por": "Caco de Prisma"
     }
   }
 ]
