--- a/translations/texts/items/generic/crafting/prisilitestar.item.json
+++ b/translations/texts/items/generic/crafting/prisilitestar.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Prisilite Star"
+      "Eng": "Prisilite Star",
+      "Por": "Estrela de Prisilite"
     }
   }
 ]
