Atualização translations/texts/items/generic/crafting/rainbowwood.item.json

--- a/translations/texts/items/generic/crafting/rainbowwood.item.json
+++ b/translations/texts/items/generic/crafting/rainbowwood.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Rainbow Wood"
+      "Eng": "Rainbow Wood",
+      "Por": "Madeira Arco-íris"
     }
   }
 ]
