Atualização translations/texts/items/generic/crafting/refinedaegisalt.item.json

--- a/translations/texts/items/generic/crafting/refinedaegisalt.item.json
+++ b/translations/texts/items/generic/crafting/refinedaegisalt.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Refined Aegisalt"
+      "Eng": "Refined Aegisalt",
+      "Por": "Aegisalt Refinado"
     }
   }
 ]
