--- a/translations/texts/items/generic/crafting/refinedferozium.item.json
+++ b/translations/texts/items/generic/crafting/refinedferozium.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Refined Ferozium"
+      "Eng": "Refined Ferozium",
+      "Por": "Ferozium Refinado"
     }
   }
 ]
