--- a/translations/texts/items/generic/crafting/refinedviolium.item.json
+++ b/translations/texts/items/generic/crafting/refinedviolium.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Refined Violium"
+      "Eng": "Refined Violium",
+      "Por": "Violium Refinado"
     }
   }
 ]
