Atualização translations/texts/items/generic/crafting/robotarms.item.json

--- a/translations/texts/items/generic/crafting/robotarms.item.json
+++ b/translations/texts/items/generic/crafting/robotarms.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Robot Arms"
+      "Eng": "Robot Arms",
+      "Por": "Braços Robóticos"
     }
   }
 ]
