Atualização translations/texts/items/generic/crafting/robotchest.item.json

--- a/translations/texts/items/generic/crafting/robotchest.item.json
+++ b/translations/texts/items/generic/crafting/robotchest.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Robot Chest"
+      "Eng": "Robot Chest",
+      "Por": "Tórax de Robô"
     }
   }
 ]
