--- a/translations/texts/items/generic/crafting/robothead.item.json
+++ b/translations/texts/items/generic/crafting/robothead.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Robot Head"
+      "Eng": "Robot Head",
+      "Por": "Cabeça do Robô"
     }
   }
 ]
