--- a/translations/texts/items/generic/crafting/robotlegs.item.json
+++ b/translations/texts/items/generic/crafting/robotlegs.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Robot Legs"
+      "Eng": "Robot Legs",
+      "Por": "Pernas de Robô"
     }
   }
 ]
