--- a/translations/texts/items/generic/crafting/seaweed.item.json
+++ b/translations/texts/items/generic/crafting/seaweed.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Alien Seaweed"
+      "Eng": "Alien Seaweed",
+      "Por": "Alga Alienígena"
     }
   }
 ]
