Atualização translations/texts/items/generic/crafting/siliconboard.item.json

--- a/translations/texts/items/generic/crafting/siliconboard.item.json
+++ b/translations/texts/items/generic/crafting/siliconboard.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Silicon Board"
+      "Eng": "Silicon Board",
+      "Por": "Placa de Silício"
     }
   }
 ]
