Atualização translations/texts/items/generic/crafting/silverbar.item.json

--- a/translations/texts/items/generic/crafting/silverbar.item.json
+++ b/translations/texts/items/generic/crafting/silverbar.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Silver Bar"
+      "Eng": "Silver Bar",
+      "Por": "Barra de Prata"
     }
   }
 ]
