Atualização translations/texts/items/generic/crafting/silverore.item.json

--- a/translations/texts/items/generic/crafting/silverore.item.json
+++ b/translations/texts/items/generic/crafting/silverore.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Silver Ore"
+      "Eng": "Silver Ore",
+      "Por": "Minério de Prata"
     }
   }
 ]
