Atualização translations/texts/items/generic/crafting/solariumore.item.json

--- a/translations/texts/items/generic/crafting/solariumore.item.json
+++ b/translations/texts/items/generic/crafting/solariumore.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Solarium Ore"
+      "Eng": "Solarium Ore",
+      "Por": "Minério de Solário"
     }
   }
 ]
