--- a/translations/texts/items/generic/crafting/solariumstar.item.json
+++ b/translations/texts/items/generic/crafting/solariumstar.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Solarium Star"
+      "Eng": "Solarium Star",
+      "Por": "Estrela de Solário"
     }
   }
 ]
