Atualização translations/texts/items/generic/crafting/syntheticmaterial.item.json

--- a/translations/texts/items/generic/crafting/syntheticmaterial.item.json
+++ b/translations/texts/items/generic/crafting/syntheticmaterial.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Synthetic Material"
+      "Eng": "Synthetic Material",
+      "Por": "Material Sintético"
     }
   }
 ]
