--- a/translations/texts/items/generic/crafting/syringe.item.json
+++ b/translations/texts/items/generic/crafting/syringe.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Medical Syringe"
+      "Eng": "Medical Syringe",
+      "Por": "Seringa Médica"
     }
   }
 ]
