Atualização translations/texts/items/generic/crafting/teleportercore.item.json

--- a/translations/texts/items/generic/crafting/teleportercore.item.json
+++ b/translations/texts/items/generic/crafting/teleportercore.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Teleporter Core"
+      "Eng": "Teleporter Core",
+      "Por": "Núcleo de Teletransportador"
     }
   }
 ]
