Atualização translations/texts/items/generic/crafting/titaniumbar.item.json

--- a/translations/texts/items/generic/crafting/titaniumbar.item.json
+++ b/translations/texts/items/generic/crafting/titaniumbar.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Titanium Bar"
+      "Eng": "Titanium Bar",
+      "Por": "Barra de Titânio"
     }
   }
 ]
