Atualização translations/texts/items/generic/crafting/titaniumore.item.json

--- a/translations/texts/items/generic/crafting/titaniumore.item.json
+++ b/translations/texts/items/generic/crafting/titaniumore.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Titanium Ore"
+      "Eng": "Titanium Ore",
+      "Por": "Minério de Titânio"
     }
   }
 ]
