--- a/translations/texts/items/generic/crafting/triangliumore.item.json
+++ b/translations/texts/items/generic/crafting/triangliumore.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Trianglium Ore"
+      "Eng": "Trianglium Ore",
+      "Por": "Minério de Trianglium"
     }
   }
 ]
