--- a/translations/texts/items/generic/crafting/tungstenbar.item.json
+++ b/translations/texts/items/generic/crafting/tungstenbar.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Tungsten Bar"
+      "Eng": "Tungsten Bar",
+      "Por": "Barra de Tungstênio"
     }
   }
 ]
