--- a/translations/texts/items/generic/crafting/tungstenore.item.json
+++ b/translations/texts/items/generic/crafting/tungstenore.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Tungsten Ore"
+      "Eng": "Tungsten Ore",
+      "Por": "Minério de Tungstênio"
     }
   }
 ]
