--- a/translations/texts/items/generic/crafting/uraniumore.item.json
+++ b/translations/texts/items/generic/crafting/uraniumore.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Uranium Ore"
+      "Eng": "Uranium Ore",
+      "Por": "Minério de Urânio"
     }
   }
 ]
