--- a/translations/texts/items/generic/crafting/uraniumrod.item.json
+++ b/translations/texts/items/generic/crafting/uraniumrod.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Uranium Rod"
+      "Eng": "Uranium Rod",
+      "Por": "Vareta de Urânio"
     }
   }
 ]
