Atualização translations/texts/items/generic/crafting/violiumore.item.json

--- a/translations/texts/items/generic/crafting/violiumore.item.json
+++ b/translations/texts/items/generic/crafting/violiumore.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Violium Ore"
+      "Eng": "Violium Ore",
+      "Por": "Minério de Violium"
     }
   }
 ]
