--- a/translations/texts/items/generic/crafting/volatilepowder.item.json
+++ b/translations/texts/items/generic/crafting/volatilepowder.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Volatile Powder"
+      "Eng": "Volatile Powder",
+      "Por": "Pó Volátil"
     }
   }
 ]
