--- a/translations/texts/items/generic/crafting/wildvines.item.json
+++ b/translations/texts/items/generic/crafting/wildvines.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Wild Vines"
+      "Eng": "Wild Vines",
+      "Por": "Vinhas Selvagens"
     }
   }
 ]
