--- a/translations/texts/items/generic/crafting/wire.item.json
+++ b/translations/texts/items/generic/crafting/wire.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Copper Wire"
+      "Eng": "Copper Wire",
+      "Por": "Fio de Cobre"
     }
   }
 ]
