--- a/translations/texts/items/generic/crafting/monsterdrops/cryonicextract.item.json
+++ b/translations/texts/items/generic/crafting/monsterdrops/cryonicextract.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Cryonic Extract"
+      "Eng": "Cryonic Extract",
+      "Por": "Extrato Criônico"
     }
   }
 ]
