--- a/translations/texts/items/generic/crafting/monsterdrops/hardenedcarapace.item.json
+++ b/translations/texts/items/generic/crafting/monsterdrops/hardenedcarapace.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Hardened Carapace"
+      "Eng": "Hardened Carapace",
+      "Por": "Carapaça Endurecida"
     }
   }
 ]
