Atualização translations/texts/items/generic/crafting/monsterdrops/phasematter.item.json

--- a/translations/texts/items/generic/crafting/monsterdrops/phasematter.item.json
+++ b/translations/texts/items/generic/crafting/monsterdrops/phasematter.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Phase Matter"
+      "Eng": "Phase Matter",
+      "Por": "Matéria de Fase"
     }
   }
 ]
