Atualização translations/texts/items/generic/crafting/monsterdrops/scorchedcore.item.json

--- a/translations/texts/items/generic/crafting/monsterdrops/scorchedcore.item.json
+++ b/translations/texts/items/generic/crafting/monsterdrops/scorchedcore.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Scorched Core"
+      "Eng": "Scorched Core",
+      "Por": "Núcleo Chamuscado"
     }
   }
 ]
