Atualização translations/texts/items/generic/crafting/monsterdrops/sharpenedclaw.item.json

--- a/translations/texts/items/generic/crafting/monsterdrops/sharpenedclaw.item.json
+++ b/translations/texts/items/generic/crafting/monsterdrops/sharpenedclaw.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Sharpened Claw"
+      "Eng": "Sharpened Claw",
+      "Por": "Garra Afiada"
     }
   }
 ]
