--- a/translations/texts/items/generic/crafting/monsterdrops/staticcell.item.json
+++ b/translations/texts/items/generic/crafting/monsterdrops/staticcell.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Static Cell"
+      "Eng": "Static Cell",
+      "Por": "Célula Estática"
     }
   }
 ]
