--- a/translations/texts/items/generic/crafting/monsterdrops/stickofram.item.json
+++ b/translations/texts/items/generic/crafting/monsterdrops/stickofram.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Stick of RAM"
+      "Eng": "Stick of RAM",
+      "Por": "Pente de Memória RAM"
     }
   }
 ]
