--- a/translations/texts/items/generic/crafting/monsterdrops/venomsample.item.json
+++ b/translations/texts/items/generic/crafting/monsterdrops/venomsample.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Venom Sample"
+      "Eng": "Venom Sample",
+      "Por": "Amostra de Veneno"
     }
   }
 ]
