--- a/translations/texts/items/liquids/healingwater.liqitem.json
+++ b/translations/texts/items/liquids/healingwater.liqitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Healing Water"
+      "Eng": "Healing Water",
+      "Por": "Água Curativa"
     }
   }
 ]
