--- a/translations/texts/items/liquids/liquidfuel.liqitem.json
+++ b/translations/texts/items/liquids/liquidfuel.liqitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Liquid Erchius Fuel"
+      "Eng": "Liquid Erchius Fuel",
+      "Por": "Combustível Erchius Líquido"
     }
   }
 ]
