--- a/translations/texts/items/liquids/milk.liqitem.json
+++ b/translations/texts/items/liquids/milk.liqitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Coconut Milk"
+      "Eng": "Coconut Milk",
+      "Por": "Leite de Coco"
     }
   }
 ]
