--- a/translations/texts/items/liquids/swampwater.liqitem.json
+++ b/translations/texts/items/liquids/swampwater.liqitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Swamp Water"
+      "Eng": "Swamp Water",
+      "Por": "Água do Pântano"
     }
   }
 ]
