--- a/translations/texts/items/materials/alienstripedwood.matitem.json
+++ b/translations/texts/items/materials/alienstripedwood.matitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Striped Wood"
+      "Eng": "Striped Wood",
+      "Por": "Madeira Listrada"
     }
   }
 ]
