--- a/translations/texts/items/materials/greenneonsymbol.matitem.json
+++ b/translations/texts/items/materials/greenneonsymbol.matitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Green Neon Block"
+      "Eng": "Green Neon Block",
+      "Por": "Bloco de Néon Verde"
     }
   }
 ]
