--- a/translations/texts/items/materials/hive.matitem.json
+++ b/translations/texts/items/materials/hive.matitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Hive Block"
+      "Eng": "Hive Block",
+      "Por": "Bloco de Colmeia"
     }
   }
 ]
