--- a/translations/texts/items/materials/petalblock.matitem.json
+++ b/translations/texts/items/materials/petalblock.matitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Petal Block"
+      "Eng": "Petal Block",
+      "Por": "Bloco de Pétala"
     }
   }
 ]
