Atualização translations/texts/items/materials/rock14.matitem.json

--- a/translations/texts/items/materials/rock14.matitem.json
+++ b/translations/texts/items/materials/rock14.matitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Granite Rock"
+      "Eng": "Granite Rock",
+      "Por": "Rocha de Granito"
     }
   }
 ]
