Atualização translations/texts/items/ship/FTLrepairkit.unlock.json

--- a/translations/texts/items/ship/FTLrepairkit.unlock.json
+++ b/translations/texts/items/ship/FTLrepairkit.unlock.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "FTL Repair Kit"
+      "Eng": "FTL Repair Kit",
+      "Por": "Kit de Reparação de FTL"
     }
   }
 ]
