--- a/translations/texts/items/ship/shiprepairkit.unlock.json
+++ b/translations/texts/items/ship/shiprepairkit.unlock.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Ship Repair Kit"
+      "Eng": "Ship Repair Kit",
+      "Por": "Kit de Reparação de Naves"
     }
   }
 ]
