--- a/translations/texts/items/generic/dyes/dyeremover.augment.json
+++ b/translations/texts/items/generic/dyes/dyeremover.augment.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Dye Remover"
+      "Eng": "Dye Remover",
+      "Por": "Removedor de Tintura"
     }
   }
 ]
