--- a/translations/texts/items/generic/dyes/orangedye.augment.json
+++ b/translations/texts/items/generic/dyes/orangedye.augment.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Orange Dye"
+      "Eng": "Orange Dye",
+      "Por": "Tintura Laranja"
     }
   }
 ]
