Atualização translations/texts/items/generic/dyes/yellowdye.augment.json

--- a/translations/texts/items/generic/dyes/yellowdye.augment.json
+++ b/translations/texts/items/generic/dyes/yellowdye.augment.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Yellow Dye"
+      "Eng": "Yellow Dye",
+      "Por": "Tintura Amarela"
     }
   }
 ]
