--- a/translations/texts/items/generic/licenses/fakelicense2.item.json
+++ b/translations/texts/items/generic/licenses/fakelicense2.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Fake Kestrel License"
+      "Eng": "Fake Kestrel License",
+      "Por": "Licença Kestrel Falsa"
     }
   }
 ]
