--- a/translations/texts/items/generic/licenses/fakelicense3.item.json
+++ b/translations/texts/items/generic/licenses/fakelicense3.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Fake Falcon License"
+      "Eng": "Fake Falcon License",
+      "Por": "Licença Falcão Falsa"
     }
   }
 ]
