Atualização translations/texts/items/generic/licenses/fakelicense4.item.json

--- a/translations/texts/items/generic/licenses/fakelicense4.item.json
+++ b/translations/texts/items/generic/licenses/fakelicense4.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Fake Eagle License"
+      "Eng": "Fake Eagle License",
+      "Por": "Licença Águia Falsa"
     }
   }
 ]
