Atualização translations/texts/items/generic/licenses/license1.item.json

--- a/translations/texts/items/generic/licenses/license1.item.json
+++ b/translations/texts/items/generic/licenses/license1.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Sparrow License"
+      "Eng": "Sparrow License",
+      "Por": "Licença Pardal"
     }
   }
 ]
