Atualização translations/texts/items/generic/licenses/license2.item.json

--- a/translations/texts/items/generic/licenses/license2.item.json
+++ b/translations/texts/items/generic/licenses/license2.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Kestrel License"
+      "Eng": "Kestrel License",
+      "Por": "Licença Kestrel"
     }
   }
 ]
