--- a/translations/texts/items/generic/licenses/fakelicense5.item.json
+++ b/translations/texts/items/generic/licenses/fakelicense5.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Fake Condor License"
+      "Eng": "Fake Condor License",
+      "Por": "Licença Condor Falsa"
     }
   }
 ]
