--- a/translations/texts/items/generic/licenses/license3.item.json
+++ b/translations/texts/items/generic/licenses/license3.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Falcon License"
+      "Eng": "Falcon License",
+      "Por": "Licença Falcon"
     }
   }
 ]
