--- a/translations/texts/items/generic/licenses/license4.item.json
+++ b/translations/texts/items/generic/licenses/license4.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Eagle License"
+      "Eng": "Eagle License",
+      "Por": "Licença Águia"
     }
   }
 ]
