Atualização translations/texts/items/generic/licenses/license5.item.json

--- a/translations/texts/items/generic/licenses/license5.item.json
+++ b/translations/texts/items/generic/licenses/license5.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Condor License"
+      "Eng": "Condor License",
+      "Por": "Licença Condor"
     }
   }
 ]
