Atualização translations/texts/items/generic/licenses/fakelicense1.item.json

--- a/translations/texts/items/generic/licenses/fakelicense1.item.json
+++ b/translations/texts/items/generic/licenses/fakelicense1.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Fake Sparrow License"
+      "Eng": "Fake Sparrow License",
+      "Por": "Licença Pardal Falsa"
     }
   }
 ]
