--- a/translations/texts/items/generic/meat/cookedalienmeat.consumable.json
+++ b/translations/texts/items/generic/meat/cookedalienmeat.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Cooked Steak"
+      "Eng": "Cooked Steak",
+      "Por": "Bife Cozido"
     }
   }
 ]
