--- a/translations/texts/items/generic/meat/cookedbacon.consumable.json
+++ b/translations/texts/items/generic/meat/cookedbacon.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Cooked Bacon"
+      "Eng": "Cooked Bacon",
+      "Por": "Bacon Cozido"
     }
   }
 ]
