Atualização translations/texts/items/generic/meat/cookedfish.consumable.json

--- a/translations/texts/items/generic/meat/cookedfish.consumable.json
+++ b/translations/texts/items/generic/meat/cookedfish.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Cooked Fish"
+      "Eng": "Cooked Fish",
+      "Por": "Peixe Cozido"
     }
   }
 ]
