Atualização translations/texts/items/generic/meat/cookedham.consumable.json

--- a/translations/texts/items/generic/meat/cookedham.consumable.json
+++ b/translations/texts/items/generic/meat/cookedham.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Cooked Ham"
+      "Eng": "Cooked Ham",
+      "Por": "Presunto Cozido"
     }
   }
 ]
