--- a/translations/texts/items/generic/meat/cookedpoultry.consumable.json
+++ b/translations/texts/items/generic/meat/cookedpoultry.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Cooked Poultry"
+      "Eng": "Cooked Poultry",
+      "Por": "Ave Cozida"
     }
   }
 ]
