--- a/translations/texts/items/generic/meat/cookedribmeat.consumable.json
+++ b/translations/texts/items/generic/meat/cookedribmeat.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Cooked Ribs"
+      "Eng": "Cooked Ribs",
+      "Por": "Costelas Cozidas"
     }
   }
 ]
