Atualização translations/texts/items/generic/meat/cookedtentacle.consumable.json

--- a/translations/texts/items/generic/meat/cookedtentacle.consumable.json
+++ b/translations/texts/items/generic/meat/cookedtentacle.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Cooked Tentacle"
+      "Eng": "Cooked Tentacle",
+      "Por": "Tentáculo Cozido"
     }
   }
 ]
