--- a/translations/texts/items/generic/meat/rawtentacle.consumable.json
+++ b/translations/texts/items/generic/meat/rawtentacle.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Raw Tentacle"
+      "Eng": "Raw Tentacle",
+      "Por": "Tentáculo Cru"
     }
   }
 ]
