Atualização translations/texts/items/generic/unlock/portable3dprinter.unlock.json

--- a/translations/texts/items/generic/unlock/portable3dprinter.unlock.json
+++ b/translations/texts/items/generic/unlock/portable3dprinter.unlock.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "^orange;Portable Pixel Printer^white;"
+      "Eng": "^orange;Portable Pixel Printer^white;",
+      "Por": "Impressora de Pixel Portátil"
     }
   }
 ]
