--- a/translations/texts/items/generic/trophies/monsterclaw.item.json
+++ b/translations/texts/items/generic/trophies/monsterclaw.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Monster Claw"
+      "Eng": "Monster Claw",
+      "Por": "Garra de Monstro"
     }
   }
 ]
