Atualização translations/texts/items/generic/tradingcards/card01.item.json

--- a/translations/texts/items/generic/tradingcards/card01.item.json
+++ b/translations/texts/items/generic/tradingcards/card01.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Trading Card #01"
+      "Eng": "Trading Card #01",
+      "Por": "Carta de Troca #01"
     }
   }
 ]
