--- a/translations/texts/items/generic/tradegoods/electronicgoods.item.json
+++ b/translations/texts/items/generic/tradegoods/electronicgoods.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Electronic Parts"
+      "Eng": "Electronic Parts",
+      "Por": "Peças Eletrônicas"
     }
   }
 ]
