--- a/translations/texts/items/generic/tradegoods/foodgoods.item.json
+++ b/translations/texts/items/generic/tradegoods/foodgoods.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Food Rations"
+      "Eng": "Food Rations",
+      "Por": "Rações Alimentares"
     }
   }
 ]
