--- a/translations/texts/items/generic/tradegoods/medicalgoods.item.json
+++ b/translations/texts/items/generic/tradegoods/medicalgoods.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Medical Supplies"
+      "Eng": "Medical Supplies",
+      "Por": "Suprimentos Médicos"
     }
   }
 ]
