--- a/translations/texts/items/generic/tradegoods/militarygoods.item.json
+++ b/translations/texts/items/generic/tradegoods/militarygoods.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Weapon Parts"
+      "Eng": "Weapon Parts",
+      "Por": "Peças de Armas"
     }
   }
 ]
