--- a/translations/texts/items/generic/shop/cannedfood.consumable.json
+++ b/translations/texts/items/generic/shop/cannedfood.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Canned Food"
+      "Eng": "Canned Food",
+      "Por": "Comida Enlatada"
     }
   }
 ]
