--- a/translations/texts/items/generic/salvage/salvagebody.item.json
+++ b/translations/texts/items/generic/salvage/salvagebody.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Salvaged Armor Plate"
+      "Eng": "Salvaged Armor Plate",
+      "Por": "Chapa de Armadura Recuperada"
     }
   }
 ]
