--- a/translations/texts/items/generic/salvage/salvagetier5.item.json
+++ b/translations/texts/items/generic/salvage/salvagetier5.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Salvaged Proton Limiter"
+      "Eng": "Salvaged Proton Limiter",
+      "Por": "Limitador de Próton Recuperado"
     }
   }
 ]
