--- a/translations/texts/items/generic/salvage/salvagetier6.item.json
+++ b/translations/texts/items/generic/salvage/salvagetier6.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Salvaged Nano Receptacle"
+      "Eng": "Salvaged Nano Receptacle",
+      "Por": "Nano Receptáculo Recuperado"
     }
   }
 ]
