--- a/translations/texts/items/generic/other/antidote.consumable.json
+++ b/translations/texts/items/generic/other/antidote.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Poison Antidote"
+      "Eng": "Poison Antidote",
+      "Por": "Antídoto de Veneno"
     }
   }
 ]
