Atualização translations/texts/items/generic/other/autochip.item.json

--- a/translations/texts/items/generic/other/autochip.item.json
+++ b/translations/texts/items/generic/other/autochip.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Auto Chip"
+      "Eng": "Auto Chip",
+      "Por": "Chip Automobilístico"
     }
   }
 ]
