--- a/translations/texts/items/generic/other/autodrive.item.json
+++ b/translations/texts/items/generic/other/autodrive.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Auto Drive"
+      "Eng": "Auto Drive",
+      "Por": "Drive Automobilístico"
     }
   }
 ]
