Atualização translations/texts/items/generic/other/bluestim.consumable.json

--- a/translations/texts/items/generic/other/bluestim.consumable.json
+++ b/translations/texts/items/generic/other/bluestim.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Blue Stim Pack"
+      "Eng": "Blue Stim Pack",
+      "Por": "Injeção de Estimulante Azul"
     }
   }
 ]
