--- a/translations/texts/items/generic/other/greenstim.consumable.json
+++ b/translations/texts/items/generic/other/greenstim.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Green Stim Pack"
+      "Eng": "Green Stim Pack",
+      "Por": "Injeção de Estimulante Verde"
     }
   }
 ]
