Atualização translations/texts/items/generic/other/redstim.consumable.json

--- a/translations/texts/items/generic/other/redstim.consumable.json
+++ b/translations/texts/items/generic/other/redstim.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Red Stim Pack"
+      "Eng": "Red Stim Pack",
+      "Por": "Injeção de Estimulante Vermelho"
     }
   }
 ]
