--- a/translations/texts/items/generic/other/bottledhealingwater.consumable.json
+++ b/translations/texts/items/generic/other/bottledhealingwater.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Bottled Healing Water"
+      "Eng": "Bottled Healing Water",
+      "Por": "Água Curativa Engarrafada"
     }
   }
 ]
