Atualização translations/texts/items/generic/other/bottledwater.consumable.json

--- a/translations/texts/items/generic/other/bottledwater.consumable.json
+++ b/translations/texts/items/generic/other/bottledwater.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Bottled Water"
+      "Eng": "Bottled Water",
+      "Por": "Água Engarrafada"
     }
   }
 ]
