Atualização translations/texts/items/generic/other/burnspray.consumable.json

--- a/translations/texts/items/generic/other/burnspray.consumable.json
+++ b/translations/texts/items/generic/other/burnspray.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Burn Resistance Spray"
+      "Eng": "Burn Resistance Spray",
+      "Por": "Spray de Resistência à Queimaduras"
     }
   }
 ]
