--- a/translations/texts/items/generic/other/comedyscript.item.json
+++ b/translations/texts/items/generic/other/comedyscript.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Comedy Script"
+      "Eng": "Comedy Script",
+      "Por": "Roteiro de Comédia"
     }
   }
 ]
