--- a/translations/texts/items/generic/other/fungusstim.consumable.json
+++ b/translations/texts/items/generic/other/fungusstim.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Fungus Stim"
+      "Eng": "Fungus Stim",
+      "Por": "Estimulante de Fungo"
     }
   }
 ]
