--- a/translations/texts/items/generic/other/grassremedy.consumable.json
+++ b/translations/texts/items/generic/other/grassremedy.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Grass Remedy"
+      "Eng": "Grass Remedy",
+      "Por": "Remédio de Grama"
     }
   }
 ]
