--- a/translations/texts/items/generic/other/manipulatormodule.item.json
+++ b/translations/texts/items/generic/other/manipulatormodule.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Manipulator Module"
+      "Eng": "Manipulator Module",
+      "Por": "Módulo de Manipulador"
     }
   }
 ]
