--- a/translations/texts/items/generic/other/mysteriousashes.item.json
+++ b/translations/texts/items/generic/other/mysteriousashes.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Mysterious Ashes"
+      "Eng": "Mysterious Ashes",
+      "Por": "Cinzas Misteriosas"
     }
   }
 ]
