--- a/translations/texts/items/generic/other/mysterioustrashbag.item.json
+++ b/translations/texts/items/generic/other/mysterioustrashbag.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Mysterious Trash Bag"
+      "Eng": "Mysterious Trash Bag",
+      "Por": "Saco de Lixo Misterioso"
     }
   }
 ]
