--- a/translations/texts/items/generic/other/nanowrap.consumable.json
+++ b/translations/texts/items/generic/other/nanowrap.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Nanowrap Bandage"
+      "Eng": "Nanowrap Bandage",
+      "Por": "Atadura Nanotecnologica"
     }
   }
 ]
