--- a/translations/texts/items/generic/other/orangestim.consumable.json
+++ b/translations/texts/items/generic/other/orangestim.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Orange Stim Pack"
+      "Eng": "Orange Stim Pack",
+      "Por": "Injeção de Estimulante Laranja"
     }
   }
 ]
