--- a/translations/texts/items/generic/other/protectorateflyer.item.json
+++ b/translations/texts/items/generic/other/protectorateflyer.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Graduation Flyer"
+      "Eng": "Graduation Flyer",
+      "Por": "Folheto da Formatura"
     }
   }
 ]
