--- a/translations/texts/items/generic/other/rottenfood.item.json
+++ b/translations/texts/items/generic/other/rottenfood.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Rotten Food"
+      "Eng": "Rotten Food",
+      "Por": "Comida Estragada"
     }
   }
 ]
