--- a/translations/texts/items/generic/other/secretnote.item.json
+++ b/translations/texts/items/generic/other/secretnote.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Secret Note"
+      "Eng": "Secret Note",
+      "Por": "Nota Secreta"
     }
   }
 ]
