--- a/translations/texts/items/generic/other/shroomremedy.consumable.json
+++ b/translations/texts/items/generic/other/shroomremedy.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Shroom Remedy"
+      "Eng": "Shroom Remedy",
+      "Por": "Remédio de Cogumelo"
     }
   }
 ]
