Atualização translations/texts/items/generic/other/soggypaper.item.json

--- a/translations/texts/items/generic/other/soggypaper.item.json
+++ b/translations/texts/items/generic/other/soggypaper.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Soggy Paper"
+      "Eng": "Soggy Paper",
+      "Por": "Papel Encharcado"
     }
   }
 ]
