--- a/translations/texts/items/generic/other/solidfuel.item.json
+++ b/translations/texts/items/generic/other/solidfuel.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Crystal Erchius Fuel"
+      "Eng": "Crystal Erchius Fuel",
+      "Por": "Combustível Erchius Cristalizado"
     }
   }
 ]
