Atualização translations/texts/items/generic/other/synthesisstim.consumable.json

--- a/translations/texts/items/generic/other/synthesisstim.consumable.json
+++ b/translations/texts/items/generic/other/synthesisstim.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Synthesis Stim"
+      "Eng": "Synthesis Stim",
+      "Por": "Estimulante de Síntese"
     }
   }
 ]
