Atualização translations/texts/items/generic/other/techcard.item.json

--- a/translations/texts/items/generic/other/techcard.item.json
+++ b/translations/texts/items/generic/other/techcard.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Tech Card"
+      "Eng": "Tech Card",
+      "Por": "Cartão Tecnológico"
     }
   }
 ]
