Atualização translations/texts/items/generic/other/translator1.item.json

--- a/translations/texts/items/generic/other/translator1.item.json
+++ b/translations/texts/items/generic/other/translator1.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Left Translation Wheel"
+      "Eng": "Left Translation Wheel",
+      "Por": "Roda de Tradução Esquerda"
     }
   }
 ]
