--- a/translations/texts/items/generic/other/translator2.item.json
+++ b/translations/texts/items/generic/other/translator2.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Right Translation Wheel"
+      "Eng": "Right Translation Wheel",
+      "Por": "Roda de Tradução Direita"
     }
   }
 ]
