--- a/translations/texts/items/generic/other/upgrademodule.item.json
+++ b/translations/texts/items/generic/other/upgrademodule.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Upgrade Module"
+      "Eng": "Upgrade Module",
+      "Por": "Módulo de Aprimoramento"
     }
   }
 ]
