Atualização translations/texts/items/generic/other/valentinechocolates.consumable.json

--- a/translations/texts/items/generic/other/valentinechocolates.consumable.json
+++ b/translations/texts/items/generic/other/valentinechocolates.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Box of Chocolates"
+      "Eng": "Box of Chocolates",
+      "Por": "Caixa de Chocolates"
     }
   }
 ]
