--- a/translations/texts/items/generic/other/winningticket.item.json
+++ b/translations/texts/items/generic/other/winningticket.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Winning Ticket"
+      "Eng": "Winning Ticket",
+      "Por": "Bilhete Premiado"
     }
   }
 ]
