Atualização translations/texts/items/generic/other/yellowstim.consumable.json

--- a/translations/texts/items/generic/other/yellowstim.consumable.json
+++ b/translations/texts/items/generic/other/yellowstim.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Yellow Stim Pack"
+      "Eng": "Yellow Stim Pack",
+      "Por": "Injeção de Estimulante Amarelo"
     }
   }
 ]
