--- a/translations/texts/items/tools/hoe.tillingtool.json
+++ b/translations/texts/items/tools/hoe.tillingtool.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "^orange;Hoe^white;"
+      "Eng": "^orange;Hoe^white;",
+      "Por": "^orange;Enxada^white;"
     }
   }
 ]
