--- a/translations/texts/items/tools/inspectiontool/inspectionmode.inspectiontool.json
+++ b/translations/texts/items/tools/inspectiontool/inspectionmode.inspectiontool.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Inspection Mode"
+      "Eng": "Inspection Mode",
+      "Por": "Modo de Inspeção"
     }
   }
 ]
