--- a/translations/texts/items/tools/inspectiontool/scanmode.inspectiontool.json
+++ b/translations/texts/items/tools/inspectiontool/scanmode.inspectiontool.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Scanning Mode"
+      "Eng": "Scanning Mode",
+      "Por": "Modo de Escaneamento"
     }
   }
 ]
