Atualização translations/texts/items/tools/mininglantern.flashlight.json

--- a/translations/texts/items/tools/mininglantern.flashlight.json
+++ b/translations/texts/items/tools/mininglantern.flashlight.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Explorer's Lantern"
+      "Eng": "Explorer's Lantern",
+      "Por": "Lanterna do Explorador"
     }
   }
 ]
