--- a/translations/texts/items/tools/painttool.painttool.json
+++ b/translations/texts/items/tools/painttool.painttool.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Paint Mode"
+      "Eng": "Paint Mode",
+      "Por": "Modo de Pintura"
     }
   }
 ]
