Atualização translations/texts/items/tools/miningtools/copperdrill.miningtool.json

--- a/translations/texts/items/tools/miningtools/copperdrill.miningtool.json
+++ b/translations/texts/items/tools/miningtools/copperdrill.miningtool.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Copper Drill"
+      "Eng": "Copper Drill",
+      "Por": "Broca de Cobre"
     }
   }
 ]
