Atualização translations/texts/items/tools/miningtools/copperpickaxe.miningtool.json

--- a/translations/texts/items/tools/miningtools/copperpickaxe.miningtool.json
+++ b/translations/texts/items/tools/miningtools/copperpickaxe.miningtool.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Copper Pickaxe"
+      "Eng": "Copper Pickaxe",
+      "Por": "Picareta de Cobre"
     }
   }
 ]
