Atualização translations/texts/items/tools/miningtools/diamonddrill.miningtool.json

--- a/translations/texts/items/tools/miningtools/diamonddrill.miningtool.json
+++ b/translations/texts/items/tools/miningtools/diamonddrill.miningtool.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Diamond Drill"
+      "Eng": "Diamond Drill",
+      "Por": "Broca de Diamante"
     }
   }
 ]
