--- a/translations/texts/items/tools/miningtools/diamondpickaxe.miningtool.json
+++ b/translations/texts/items/tools/miningtools/diamondpickaxe.miningtool.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Diamond Pickaxe"
+      "Eng": "Diamond Pickaxe",
+      "Por": "Picareta de Diamante"
     }
   }
 ]
