Atualização translations/texts/items/tools/miningtools/fossiltool.miningtool.json

--- a/translations/texts/items/tools/miningtools/fossiltool.miningtool.json
+++ b/translations/texts/items/tools/miningtools/fossiltool.miningtool.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Fossil Extractor"
+      "Eng": "Fossil Extractor",
+      "Por": "Extrator de Fóssil"
     }
   }
 ]
