Atualização translations/texts/items/tools/miningtools/goldpickaxe.miningtool.json

--- a/translations/texts/items/tools/miningtools/goldpickaxe.miningtool.json
+++ b/translations/texts/items/tools/miningtools/goldpickaxe.miningtool.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Gold Pickaxe"
+      "Eng": "Gold Pickaxe",
+      "Por": "Picareta de Ouro"
     }
   }
 ]
