Atualização translations/texts/items/tools/miningtools/laserminer.miningtool.json

--- a/translations/texts/items/tools/miningtools/laserminer.miningtool.json
+++ b/translations/texts/items/tools/miningtools/laserminer.miningtool.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Laser Mining Tool"
+      "Eng": "Laser Mining Tool",
+      "Por": "Ferramenta de Mineração a Laser"
     }
   }
 ]
