Atualização translations/texts/items/tools/miningtools/platinumdrill.miningtool.json

--- a/translations/texts/items/tools/miningtools/platinumdrill.miningtool.json
+++ b/translations/texts/items/tools/miningtools/platinumdrill.miningtool.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Platinum Drill"
+      "Eng": "Platinum Drill",
+      "Por": "Broca de Platina"
     }
   }
 ]
