--- a/translations/texts/items/tools/miningtools/platinumpickaxe.miningtool.json
+++ b/translations/texts/items/tools/miningtools/platinumpickaxe.miningtool.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Platinum Pickaxe"
+      "Eng": "Platinum Pickaxe",
+      "Por": "Picareta de Platina"
     }
   }
 ]
