--- a/translations/texts/items/tools/miningtools/silverdrill.miningtool.json
+++ b/translations/texts/items/tools/miningtools/silverdrill.miningtool.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Silver Drill"
+      "Eng": "Silver Drill",
+      "Por": "Broca de Prata"
     }
   }
 ]
