--- a/translations/texts/items/tools/miningtools/silverpickaxe.miningtool.json
+++ b/translations/texts/items/tools/miningtools/silverpickaxe.miningtool.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Silver Pickaxe"
+      "Eng": "Silver Pickaxe",
+      "Por": "Picareta de Prata"
     }
   }
 ]
