--- a/translations/texts/items/tools/miningtools/superfishaxedrop.miningtool.json
+++ b/translations/texts/items/tools/miningtools/superfishaxedrop.miningtool.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Fishaxe (Drops)"
+      "Eng": "Fishaxe (Drops)",
+      "Por": "Peixado (Drops)"
     }
   }
 ]
