Atualização translations/texts/items/instruments/acousticguitar.instrument.json

--- a/translations/texts/items/instruments/acousticguitar.instrument.json
+++ b/translations/texts/items/instruments/acousticguitar.instrument.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Acoustic Guitar"
+      "Eng": "Acoustic Guitar",
+      "Por": "Violão"
     }
   }
 ]
