Atualização translations/texts/items/instruments/bones.instrument.json

--- a/translations/texts/items/instruments/bones.instrument.json
+++ b/translations/texts/items/instruments/bones.instrument.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Floran Bone Xylophone"
+      "Eng": "Floran Bone Xylophone",
+      "Por": "Xilofone Floran de Osso "
     }
   }
 ]
