Atualização translations/texts/items/throwables/bouncyball.thrownitem.json

--- a/translations/texts/items/throwables/bouncyball.thrownitem.json
+++ b/translations/texts/items/throwables/bouncyball.thrownitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Bouncy Ball"
+      "Eng": "Bouncy Ball",
+      "Por": "Bola Saltitante"
     }
   }
 ]
