Atualização translations/texts/items/throwables/bowlingball.thrownitem.json

--- a/translations/texts/items/throwables/bowlingball.thrownitem.json
+++ b/translations/texts/items/throwables/bowlingball.thrownitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Bowling Ball"
+      "Eng": "Bowling Ball",
+      "Por": "Bola de Boliche"
     }
   }
 ]
