Atualização translations/texts/items/throwables/capturepod.thrownitem.json

--- a/translations/texts/items/throwables/capturepod.thrownitem.json
+++ b/translations/texts/items/throwables/capturepod.thrownitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Capture Pod"
+      "Eng": "Capture Pod",
+      "Por": "Capsula de Captura"
     }
   }
 ]
