--- a/translations/texts/items/throwables/energyjavelin.thrownitem.json
+++ b/translations/texts/items/throwables/energyjavelin.thrownitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Energy Javelin"
+      "Eng": "Energy Javelin",
+      "Por": "Javelina de Energia"
     }
   }
 ]
