--- a/translations/texts/items/throwables/firework.thrownitem.json
+++ b/translations/texts/items/throwables/firework.thrownitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Red Firework"
+      "Eng": "Red Firework",
+      "Por": "Fogo de Artifício Vermelho"
     }
   }
 ]
