--- a/translations/texts/items/throwables/fireworkgreen.thrownitem.json
+++ b/translations/texts/items/throwables/fireworkgreen.thrownitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Green Firework"
+      "Eng": "Green Firework",
+      "Por": "Fogo de Artifício Verde"
     }
   }
 ]
