--- a/translations/texts/items/throwables/fireworkblue.thrownitem.json
+++ b/translations/texts/items/throwables/fireworkblue.thrownitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Blue Firework"
+      "Eng": "Blue Firework",
+      "Por": "Fogo de Artifício Azul"
     }
   }
 ]
