Atualização translations/texts/items/throwables/flowerygrassseeds.thrownitem.json

--- a/translations/texts/items/throwables/flowerygrassseeds.thrownitem.json
+++ b/translations/texts/items/throwables/flowerygrassseeds.thrownitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Flowery Grass Seeds"
+      "Eng": "Flowery Grass Seeds",
+      "Por": "Sementes de Grama Florida"
     }
   }
 ]
