--- a/translations/texts/items/throwables/glowbomb.thrownitem.json
+++ b/translations/texts/items/throwables/glowbomb.thrownitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "The Night Light"
+      "Eng": "The Night Light",
+      "Por": "A Luz Noturna"
     }
   }
 ]
