Atualização translations/texts/items/throwables/glowstickblue.thrownitem.json

--- a/translations/texts/items/throwables/glowstickblue.thrownitem.json
+++ b/translations/texts/items/throwables/glowstickblue.thrownitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Blue Glowstick"
+      "Eng": "Blue Glowstick",
+      "Por": "Vareta Luminosa Azul"
     }
   }
 ]
