--- a/translations/texts/items/throwables/glowstickorange.thrownitem.json
+++ b/translations/texts/items/throwables/glowstickorange.thrownitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Orange Glowstick"
+      "Eng": "Orange Glowstick",
+      "Por": "Vareta Luminosa Laranja"
     }
   }
 ]
