--- a/translations/texts/items/throwables/glowstickyellow.thrownitem.json
+++ b/translations/texts/items/throwables/glowstickyellow.thrownitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Yellow Glowstick"
+      "Eng": "Yellow Glowstick",
+      "Por": "Vareta Luminosa Amarela"
     }
   }
 ]
