--- a/translations/texts/items/throwables/glowstickgreen.thrownitem.json
+++ b/translations/texts/items/throwables/glowstickgreen.thrownitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Green Glowstick"
+      "Eng": "Green Glowstick",
+      "Por": "Vareta Luminosa Verde"
     }
   }
 ]
