--- a/translations/texts/items/throwables/grassseeds.thrownitem.json
+++ b/translations/texts/items/throwables/grassseeds.thrownitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Grass Seeds"
+      "Eng": "Grass Seeds",
+      "Por": "Sementes de Grama"
     }
   }
 ]
