--- a/translations/texts/items/throwables/hivebomb.thrownitem.json
+++ b/translations/texts/items/throwables/hivebomb.thrownitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Bug Hive"
+      "Eng": "Bug Hive",
+      "Por": "Colmeia de Insetos"
     }
   }
 ]
