--- a/translations/texts/items/throwables/huntingspear.thrownitem.json
+++ b/translations/texts/items/throwables/huntingspear.thrownitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Hunting Spear"
+      "Eng": "Hunting Spear",
+      "Por": "Lança de Caça"
     }
   }
 ]
