--- a/translations/texts/items/throwables/lavaballoon.thrownitem.json
+++ b/translations/texts/items/throwables/lavaballoon.thrownitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Lava Balloon"
+      "Eng": "Lava Balloon",
+      "Por": "Balão de Lava"
     }
   }
 ]
