Atualização translations/texts/items/throwables/paperplane.thrownitem.json

--- a/translations/texts/items/throwables/paperplane.thrownitem.json
+++ b/translations/texts/items/throwables/paperplane.thrownitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Paper Plane"
+      "Eng": "Paper Plane",
+      "Por": "Avião de Papel"
     }
   }
 ]
