--- a/translations/texts/items/throwables/petball.thrownitem.json
+++ b/translations/texts/items/throwables/petball.thrownitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Little Red Ball"
+      "Eng": "Little Red Ball",
+      "Por": "Bolinha Vermelha"
     }
   }
 ]
