Atualização translations/texts/items/throwables/throwingaxe.thrownitem.json

--- a/translations/texts/items/throwables/throwingaxe.thrownitem.json
+++ b/translations/texts/items/throwables/throwingaxe.thrownitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Throwing Axe"
+      "Eng": "Throwing Axe",
+      "Por": "Machado de Arremesso"
     }
   }
 ]
