Atualização translations/texts/items/throwables/throwingboulder.thrownitem.json

--- a/translations/texts/items/throwables/throwingboulder.thrownitem.json
+++ b/translations/texts/items/throwables/throwingboulder.thrownitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Throwing Boulder"
+      "Eng": "Throwing Boulder",
+      "Por": "Pedregulho de Arremesso"
     }
   }
 ]
