Atualização translations/texts/items/throwables/throwingknife.thrownitem.json

--- a/translations/texts/items/throwables/throwingknife.thrownitem.json
+++ b/translations/texts/items/throwables/throwingknife.thrownitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Throwing Knife"
+      "Eng": "Throwing Knife",
+      "Por": "Faca de Arremesso"
     }
   }
 ]
