Atualização translations/texts/items/generic/food/tier1/fishdumplings.consumable.json

--- a/translations/texts/items/generic/food/tier1/fishdumplings.consumable.json
+++ b/translations/texts/items/generic/food/tier1/fishdumplings.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Fish Dumplings"
+      "Eng": "Fish Dumplings",
+      "Por": "Bolinhos de Peixe"
     }
   }
 ]
