Atualização translations/texts/items/generic/food/tier1/meatpie.consumable.json

--- a/translations/texts/items/generic/food/tier1/meatpie.consumable.json
+++ b/translations/texts/items/generic/food/tier1/meatpie.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Shepherd's Pie"
+      "Eng": "Shepherd's Pie",
+      "Por": "Escondidinho"
     }
   }
 ]
