Atualização translations/texts/items/generic/food/tier1/pearlpearisotto.consumable.json

--- a/translations/texts/items/generic/food/tier1/pearlpearisotto.consumable.json
+++ b/translations/texts/items/generic/food/tier1/pearlpearisotto.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Pearlpea Risotto"
+      "Eng": "Pearlpea Risotto",
+      "Por": "Risoto de Ervilha"
     }
   }
 ]
