Atualização translations/texts/items/generic/food/tier1/potatogrids.consumable.json

--- a/translations/texts/items/generic/food/tier1/potatogrids.consumable.json
+++ b/translations/texts/items/generic/food/tier1/potatogrids.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Potato Grids"
+      "Eng": "Potato Grids",
+      "Por": "Grades de Batata"
     }
   }
 ]
