Atualização translations/texts/items/generic/food/tier2/applecrumble.consumable.json

--- a/translations/texts/items/generic/food/tier2/applecrumble.consumable.json
+++ b/translations/texts/items/generic/food/tier2/applecrumble.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Apple Crumble"
+      "Eng": "Apple Crumble",
+      "Por": "Crumble de Maçã"
     }
   }
 ]
