Atualização translations/texts/items/generic/food/tier2/baconpancakes.consumable.json

--- a/translations/texts/items/generic/food/tier2/baconpancakes.consumable.json
+++ b/translations/texts/items/generic/food/tier2/baconpancakes.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Bacon Pancakes"
+      "Eng": "Bacon Pancakes",
+      "Por": "Panquecas de Bacon"
     }
   }
 ]
