Atualização translations/texts/items/generic/food/tier2/beakseedbread.consumable.json

--- a/translations/texts/items/generic/food/tier2/beakseedbread.consumable.json
+++ b/translations/texts/items/generic/food/tier2/beakseedbread.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Beakseed Bread"
+      "Eng": "Beakseed Bread",
+      "Por": "Pão de Beakseed"
     }
   }
 ]
