Atualização translations/texts/items/generic/food/tier2/beakseedbread.consumable.json

--- a/translations/texts/items/generic/food/tier2/beakseedbread.consumable.json
+++ b/translations/texts/items/generic/food/tier2/beakseedbread.consumable.json
@@ -8,7 +8,7 @@
     },
     "Texts": {
       "Eng": "Beakseed Bread",
-      "Por": "Pão de Beakseed"
+      "Por": "Pão de Semente de Bico"
     }
   }
 ]
