Atualização translations/texts/items/generic/food/tier2/beakseedtart.consumable.json

--- a/translations/texts/items/generic/food/tier2/beakseedtart.consumable.json
+++ b/translations/texts/items/generic/food/tier2/beakseedtart.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Beakseed Tart"
+      "Eng": "Beakseed Tart",
+      "Por": "Torta de Semente de Bico"
     }
   }
 ]
