Atualização translations/texts/items/generic/food/tier2/carrotbread.consumable.json

--- a/translations/texts/items/generic/food/tier2/carrotbread.consumable.json
+++ b/translations/texts/items/generic/food/tier2/carrotbread.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Carrot Bread"
+      "Eng": "Carrot Bread",
+      "Por": "Pão de Cenoura"
     }
   }
 ]
