Atualização translations/texts/items/generic/food/tier2/carrotsoup.consumable.json

--- a/translations/texts/items/generic/food/tier2/carrotsoup.consumable.json
+++ b/translations/texts/items/generic/food/tier2/carrotsoup.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Carrot Soup"
+      "Eng": "Carrot Soup",
+      "Por": "Sopa de Cenoura"
     }
   }
 ]
