Atualização translations/texts/items/generic/food/tier2/featherfood.consumable.json

--- a/translations/texts/items/generic/food/tier2/featherfood.consumable.json
+++ b/translations/texts/items/generic/food/tier2/featherfood.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Feather Food"
+      "Eng": "Feather Food",
+      "Por": "Comida Penada"
     }
   }
 ]
