Atualização translations/texts/items/generic/food/tier2/flatwhite.consumable.json

--- a/translations/texts/items/generic/food/tier2/flatwhite.consumable.json
+++ b/translations/texts/items/generic/food/tier2/flatwhite.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Flat White Coffee"
+      "Eng": "Flat White Coffee",
+      "Por": "Café Flat White"
     }
   }
 ]
