Atualização translations/texts/items/generic/food/tier2/pearlpeajam.consumable.json

--- a/translations/texts/items/generic/food/tier2/pearlpeajam.consumable.json
+++ b/translations/texts/items/generic/food/tier2/pearlpeajam.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Pearlpea Jam"
+      "Eng": "Pearlpea Jam",
+      "Por": "Geléia de Ervilha"
     }
   }
 ]
