Atualização translations/texts/items/generic/food/tier2/pizzaslice.consumable.json

--- a/translations/texts/items/generic/food/tier2/pizzaslice.consumable.json
+++ b/translations/texts/items/generic/food/tier2/pizzaslice.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Pizza Slice"
+      "Eng": "Pizza Slice",
+      "Por": "Fatia de Pizza"
     }
   }
 ]
