Atualização translations/texts/items/generic/food/tier2/ricepudding.consumable.json

--- a/translations/texts/items/generic/food/tier2/ricepudding.consumable.json
+++ b/translations/texts/items/generic/food/tier2/ricepudding.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Rice Pudding"
+      "Eng": "Rice Pudding",
+      "Por": "Arroz Doce"
     }
   }
 ]
