Atualização translations/texts/items/generic/food/tier2/sweetpopcorn.consumable.json

--- a/translations/texts/items/generic/food/tier2/sweetpopcorn.consumable.json
+++ b/translations/texts/items/generic/food/tier2/sweetpopcorn.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Sweet Popcorn"
+      "Eng": "Sweet Popcorn",
+      "Por": "Pipoca Doce"
     }
   }
 ]
