Atualização translations/texts/items/generic/food/tier3/apexfritter.consumable.json

--- a/translations/texts/items/generic/food/tier3/apexfritter.consumable.json
+++ b/translations/texts/items/generic/food/tier3/apexfritter.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Apex Fritter"
+      "Eng": "Apex Fritter",
+      "Por": "Fritura Apex"
     }
   }
 ]
